<resources>
    <string name="app_name">Concession</string>

    <string name="icon_text">Concession</string>
    <string name="back">BACK</string>
    <string name="instruction">INSTRUCTIONS</string>

    <!--strings for login page-->
    <string name="emailid">Email Id</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forgot Password?</string>
    <string name="sigin">Sign In</string>
    <string name="signup">Sign Up</string>

    <!--strings for login page-->
    <string name="cnfrmpass">Confirm Password</string>
    <string name="register">Register</string>

    <!--For MainActivity/Aadhaar Card Scanning Page-->
    <string name="scan_aadhaar">SCAN AADHAAR CARD</string>
    <string name="click_scan_aadhaar">CLICK HERE TO SCAN AADHAAR CARD</string>
    <string name="welcome_msg">Scan your aadhar card here.</string>
    <string name="scan_new">Scan New Aadhaar Card</string>
    <string name="view_saved">View Saved Aadhaar Details</string>
    <string name="next">NEXT</string>

    <!--FormActivity-->
    <string name="uid">UID</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="birthdate">Date of Birth</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="course">Course</string>
    <string name="year">Year</string>
    <string name="save">SAVE</string>

    <!--For DropDown/Spinner in FromActivity-->
    <string-array name="course_list">
        <item>MCA</item>
        <item>BSC</item>
        <item>MSC</item>
    </string-array>
    <string-array name="train_class">
        <item>First Class</item>
        <item>Second Class</item>
    </string-array>

    <string-array name="year_list">
        <item>FY</item>
        <item>SY</item>
        <item>TY</item>
    </string-array>

    <string-array name="sem_list">
        <item>Sem I</item>
        <item>Sem II</item>
        <item>Sem III</item>
        <item>Sem IV</item>
        <item>Sem V</item>
        <item>Sem VI</item>
    </string-array>

    <string-array name="sem_list1">
        <item>Sem I</item>
        <item>Sem II</item>
        <item>Sem III</item>
        <item>Sem IV</item>
    </string-array>

    <!--ConcessionFillActivity-->
    <string name="passint">Pass Interval</string>
    <string name="trainclass">Train Class</string>
    <string-array name="passint_list">
        <item>Monthly</item>
        <item>Quaterly</item>
    </string-array>
    <string name="dest">Destination</string>
    <string name="source">Source</string>
    <string name="prestartdate">Previous Pass Start Date</string>
    <string name="preenddate">Previous Pass End Date</string>
    <string name="condate">Concession Date</string>
    <string name="clgdest">Santacruz</string>
    <string name="sem">Semester</string>

    <!--ConfirmActivity-->
    <string name="cancle">CANCLE</string>
    <string name="confirm">CONFIRM</string>

    <string name="NA">NOT AVAILABLE</string>

    <!-- Menu -->
    <string name="form">Form</string>
    <string name="logout">Logout</string>

</resources>
